# resale-flat-prices

./: .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/: csv_data.ipynb  data_exploration.ipynb  data_pipeline.ipynb  geocode_address.ipynb  geocoded_address_json_to_geojson.ipynb  geocoded_addresses_h3.ipynb  geocoded_addresses_update.ipynb  geocoded_addresses_updating.ipynb  h3_statistical_analysis.ipynb  load_and_process_data.ipynb  main.ipynb  point_statistical_analysis.ipynb  price_indexing.ipynb  private_residential_data_pipeline.ipynb  private_residential_h3_statistical_analysis.ipynb  private_residential_price_indexing.ipynb  raw_data_pipeline.ipynb  resale_price_indexing.ipynb  resale_price_modeling.ipynb  resale_rent_data_pipeline.ipynb  resale_rent_price_indexing.ipynb
src/property_prices/: __init__.py
src/property_prices/csv_data/: data_processing_utils.py  data_processor.py  private_csv_data.py  private_data_processor.py  rent_csv_data.py  resale_csv_data.py
src/property_prices/geocode/: geocoded_addresses.py  geopy_geocoder.py  hdb_addresses.py  landed_addresses.py  lat_lon_constants.py
src/property_prices/geojson_data/: hdb_existing_building_geojson_data.py
src/property_prices/h3_utils/: h3_statistics.py  h3_utils.py
src/property_prices/hdb_building_info/: hdb_building_info.py
src/property_prices/linear_inversion/: l1_norm_inversion.py  linear_inversion.py
src/property_prices/private_residential_data/: private_residential_data.py
src/property_prices/resale_flat_data/: flat_data_base.py  rent_prices_data.py  resale_flat_data.py
src/property_prices/transaction_csv_data/: data_processor.py  private_csv_data.py  rent_csv_data.py  resale_csv_data.py
src/property_prices/transaction_data/: data_processor.py  private_csv_data.py  rent_csv_data.py  resale_csv_data.py
src/resale_flat_prices/: __init__.py
src/resale_flat_prices/csv_data/: csv_data.py  csv_file_data.py  data_processing_utils.py  (+4 more)
tools/: data_pipeline.py  data_pipeline.yml  hdb_addresses.py  hdb_building_info.py  hdb_building_info.yml  hdb_data_pipeline.py  price_indexing.py  price_indexing.yml  raw_data_pipeline.py  raw_data_pipeline.yml  resale_rent_data_pipeline.py  resale_rent_price_indexing.py
(+24 files in other folders)
