[build-system]
requires = [
    "setuptools", 
    "natsort",
    "PyYAML",
    "numpy", 
    "pandas", 
    "openpyxl",
    "lxml",
    "matplotlib", 
    "scikit-learn", 
    "ipykernel", 
    "geopy", 
    "h3", 
    "geopandas",
    "contextily",
    "pyarrow",
]
build-backend = "setuptools.build_meta"
