[metadata]
name = Resale Flat Prices
version = 0.0.1
author = Y. Natsume
author_email = None
description = Analysis and predictive modelling of HDB resale flat prices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/resale-flat-prices
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/resale-flat-prices/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pandas
    matplotlib
    lightgbm
    scikit-learn
    ipykernel
    geopy

# [options.extras_require]
# geocode = geopy

[options.packages.find]
where = src
